# leonie

./: .gitignore  Cargo.toml  README.md  devenv.nix  devenv.yaml
benches/: flamegraph.rs  normalize.rs  timing.rs
src/: ast.rs  bitvec.rs  common.rs  env.rs  error.rs  eval.rs  lexer.rs  lib.rs  main.rs  metas.rs  parser.rs  raw.rs  term.rs  tests.rs  value.rs
tests/: normalize.rs  prune.rs
