[package]
name = "leonie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
bitvec = "1.0.1"
chumsky = { git = "https://github.com/herkhinah/chumsky.git", branch = "shekhinah/cherry-pick", features = [ "nightly" ] }

[dev-dependencies]
criterion = "0.4.0"
const_format = "0.2.30"
pprof = { version = "0.11.0", features = ["flamegraph", "criterion"] }

[net]
git-fetch-with-cli = true

[profile.release]
debug = true

[[bench]]
name = "flamegraph"
harness = false

[[bench]]
name = "timing"
harness = false


