[package]
name = "leonie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
parser_debug = [ "dep:ansi_term" ]

[dependencies]
ansi_term = { verison = "0.12.1", optional = true }
anyhow = { version = "1.0.68", features = ["backtrace"] }
ariadne = "0.1.5"
bitvec = "1.0.1"
bumpalo = { version = "3.11.1", features = ["allocator_api"] }
chumsky = { git = "https://github.com/herkhinah/chumsky.git", branch = "shekhinah/span", features = [ "nightly" ] }

[dev-dependencies]
criterion = "0.4.0"
const_format = "0.2.30"
pprof = { version = "0.11.0", features = ["flamegraph", "criterion"] }

[net]
git-fetch-with-cli = true

[profile.release]
debug = true

[[bench]]
name = "flamegraph"
harness = false

[[bench]]
name = "timing"
harness = false


